<resources xmlns:https="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Ticked-it!</string>
    <string name="home">ACCUEIL</string>
    <string name="scan">SCAN</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="forgotten_pwd">Mot de passe oublié ?</string>
    <string name="login_um">Se connecter via Un-Mute</string>
    <string name="login_smartlock">Se connecter avec Smart Lock</string>
    <string name="scan_status">scannés : </string>
    <string name="ticket_ok">Ticket validé !</string>
    <string name="ticket_ok_dialog">Ticket validé !</string>
    <string name="see_more">Plus d\'infos</string>
    <string name="back_to_scan">Retour au scan</string>
    <string name="ok">OK</string>
    <string name="sth_wrong">"Oups, une erreur est survenue"</string>
    <string name="no_barcode_detected">Aucun code-barre détecté</string>
    <string name="stat">STATS</string>
    <string name="my_events">Mes événements</string>
    <string name="back">RETOUR</string>
    <string name="error_barcode">Oups, il y a eu une erreur avec le scanner</string>
    <string name="user_wrong_credentials">Mauvais nom d\'utilisateur ou mot de passe.</string>
    <string name="user_not_found">Veuillez entrer un nom d\'utilisateur valide</string>
    <string name="user_cant_access">Vous ne pouvez pas utiliser l\'application. Vous devez être gestionnaire de campagnes.</string>
    <string name="user_no_login">Vous devez entrer un nom d\'utilisateur et un mot de passe.</string>
    <string name="user_logged">Bonjour %1$s !</string>
    <string name="add_ticket">Ajouter un ticket</string>
    <string name="cancel">Annuler</string>
    <string name="ticket_added">Ticket ajouté !</string>
    <string name="ticket_total">CAPACITE DE LA SALLE : %1$d</string>
    <string name="ticket_sold">VENDUS EN PREVENTE : %1$d (%2$.2f %%)</string>
    <string name="ticket_scanned">SCANNES : %1$d</string>
    <string name="ticket_on_site">SUR SITE : %1$d</string>
    <string name="room_name">SALLE : %1$s</string>
    <string name="volley_error_no_connexion">Problème de connexion. Vérifiez que vous avez internet et réessayez d\'ici quelques instants.</string>
    <string name="volley_error_server_error">Problème de connexion au serveur. Réessayez d\'ici quelques instants.</string>
    <string name="logo_description">Logo de Ticked-it</string>
    <string name="scan_error_ticket_not_exist">Ce ticket n\'existe pas.</string>
    <string name="scan_error_event_not_exist">Cet événement n\'existe pas.</string>
    <string name="scan_error_incorrect_date">Cet événement n\'a pas lieu aujourd\'hui.</string>
    <string name="scan_error_no_match_event_tix">Code-barre inconnu</string>
    <string name="scan_error_tix_refund">Ce ticket a été remboursé et n\'est donc plus valide.</string>
    <string name="scan_error_already_scanned">Ce ticket a déjà été scanné.</string>
    <string name="enter_manually_barcode">Entrer le code</string>
    <string name="enter_manually_barcode_instructions">Veuillez entrer manuellement la valeur du code-barre</string>
    <string name="validate">VALIDER</string>
    <string name="no_barcode_input">Veuillez introduire un code-barre</string>
    <string name="add_ticket_instructions">Choisissez les tickets que vous voulez vendre</string>
    <string name="order_recap">Vous rajoutez %1$d ticket(s) pour %2$.2f euros. Confirmer ?</string>
    <string name="payment_mode">Mode de paiement</string>
    <string name="via_bancontact">Pour BANCONTACT, scanner le QR-CODE ci-dessous.</string>
    <string name="via_cash">PAYER VIA CASH</string>
    <string name="via_bc">VIA BANCONTACT</string>
    <string name="amount_to_pay">A payer : %1$.2f euro(s)</string>
    <string name="done_payment">C\'est payé !</string>
    <string name="menu_item_stat">Stats</string>
    <string name="menu_item_qrcode">Scanner</string>
    <string name="menu_item_type_code">Introduire</string>
    <string name="menu_item_add_ticket">Vendre</string>
    <string name="menu_item_guests">Public</string>
    <string name="pie_chart_scanned">Scannés</string>
    <string name="pie_chart_to_be_scanned">A scanner</string>
    <string name="pie_chart_sold_on_site">Vendus sur place</string>
    <string name="pie_chart_remaining">Restants</string>
    <string name="soldout">Si vous rajouter ces tickets, le soldout sera dépassé. Etes-vous sûr(e) d\'accepter plus de personnes que peut n\'en contenir le lieu de l\'événement ?</string>
    <string name="min_one_cp_selected">Vous devez sélectionner au moins 1 ticket !</string>
    <string name="tickets_well_added">Les tickets ont bien été rajoutés !</string>
    <string name="tickets_not_well_added">Problème lors de l\'ajout des tickets. Essayez encore.</string>
    <string name="search_hint">Chercher...</string>
    <string name="nav_error_scan">L\'événément ne se déroule pas aujourd\'hui. Vous ne pouvez pas scanner des tickets...</string>
    <string name="nav_error_keyboard">L\'événément ne se déroule pas aujourd\'hui. Vous ne pouvez pas introduire des code-barres à la main...</string>
    <string name="nav_error_sell">L\'événément ne se déroule pas aujourd\'hui. Vous ne pouvez pas vendre des tickets sur place...</string>
    <string name="nav_error_audience">L\'événément ne se déroule pas aujourd\'hui. Vous ne pouvez pas afficher la liste des participants...</string>
    <string name="error">ERREUR</string>
    <string name="show_password">Montrer le mot de passe</string>
    <string name="progress_state_payment_mode">Mode paiement (vendus sur place) (%)</string>
    <string name="payment_per_cp">Nombre de tickets vendus par type de tickets</string>
    <string name="money_per_cp">Somme récoltée par type de tickets</string>
    <string name="audience_btn_in">IN (%1$d)</string>
    <string name="audience_btn_all">ALL (%1$d)</string>
    <string name="audience_btn_out">OUT (%1$d)</string>
    <string name="horizontalchart_label_cash">CASH (%1$d/%2$d)</string>
    <string name="horizontalchart_label_cb">CB (%1$d/%2$d)</string>
    <string name="already_passed">[Déjà passé] </string>
    <string name="credentials_saved">Informations de connexion sauvées</string>
    <string name="credentials_not_saved">Problème lors de stockage des informations de connexion</string>
    <string name="right_account">Voulez-vous vous connecter automatiquement avec le compte %1$s ?</string>
    <string name="yes">OUI</string>
    <string name="no">NON</string>
    <string name="no_internet_back_up">Vous n\'avez pas internet. Vous serez connecté mais les données que vous verrez ne seront pas à jour...</string>
    <string name="faq_question1">Dois-je être connecté à internet pour utiliser l’application ?</string>
    <string name="faq_answer1">Non. Cependant, le jour de l’événement, il vous faudra vous connecter au moins une fois grâce à une connexion Wi-Fi ou 3/4G. En effet, le scanning nécessite une synchronisation journalière de l’application avec la base de données de notre serveur.</string>
    <string name="faq_question2">Puis-je utiliser simultanément 2 smartphones pour scanner des tickets ?</string>
    <string name="faq_answer2">Oui, si vous possédez une connexion internet. L’utilisation de 2 smartphones sans accès à une connexion internet pourrait permettre à un utilisateur de scanner, avec succès, son ticket plusieurs fois.</string>
    <string name="faq_question3">Une personne tierce doit utiliser l’application lors d’un événement, comment faire ?</string>
    <string name="faq_answer3">Seule les personnes renseignées comme organisatrices d’un événement (sur la plateforme Ticked-it) peuvent utiliser l’application. Dès lors, cette personne peut soit utiliser le compte d’un organisateur ou vous pouvez l’ajouter, depuis la plateforme, dans votre organisation le temps de l’événement.</string>
    <string name="instructions">Afin de pouvoir scanner des tickets, il vous faut vous assurer que votre application soit bien synchronisée avec notre base de données. Pour ce faire, il vous suffit de vous connecter, au moins 1 fois, à l’application avec une connexion internet (Wi-Fi, 3G, 4G, etc.) le jour de l’événement. Attention, tous les tickets vendus après cette connexion ne seront pas synchronisés, donc il vous faudra vous reconnecter à nouveau.</string>
    <string name="no_internet">Pas d\'internet ?!</string>
    <string name="save_buyers_infos">Enregistrer les données de l\'acheteur</string>
    <string name="email_address">Adresse e-mail</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="optional">(Optionnel)</string>
    <string name="name_but_no_email">Les 3 champs doivent être remplis !</string>
    <string name="email_no_valid">Adresse email non valide</string>
    <string name="title_activity_settings">Options</string>
    <string name="fr_value">Français</string>
    <string name="en_value">Anglais</string>
    <string name="nl_value">Néerlandais</string>
    <string name="lang_title">Langues</string>
    <string name="lang_header">Choisir la langue</string>
    <string name="option_title">Options</string>
    <string name="create_account"><u>Pas de compte ? Cliquez ici !</u></string>
    <string name="activate_notif">Activer les notifications</string>
    <string name="remember_login">Se souvenir de moi</string>
    <string name="home_bar">Accueil</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="faq">FAQ</string>
    <string name="refresh">Rafraîchir</string>
    <string name="dark_mode">Thème sombre</string>
    <string name="my_event">Mon événement</string>
    <string name="create_ticket">Créer un ticket</string>
    <string name="ticket_name">Nom</string>
    <string name="ticket_description">Description</string>
    <string name="stock_ticket">Nombre en\nstock au total</string>
    <string name="max_nb_ticket">Nombre maximum par\ncommande</string>
    <string name="ticket_weight">Poids</string>
    <string name="kid_ticket">Il s\'agit d\'un ticket enfant</string>
    <string name="free_price">Le prix doit être librement choisi par les acheteurs</string>
    <string name="description_child_ticket">Si cette case est cochée, des mentions supplémentaires pour les enfants apparaîtront sur le ticket. Elles vous permettront de vérifier si la personne qui le présente est bel et bien un enfant.</string>
    <string name="free_ticket_price">Prix (en euros) (soit 0 €, soit 1 € ou plus)</string>
    <string name="create">Créer</string>
    <string name="restart_app">Redemarrez l\'application pour appliquer le changement de theme</string>
    <string name="create_barcode_manually"><u>Cliquez ici pour entrer le barcode manuellement</u></string>
    <string name="festival_action_bar">Festival see U</string>
    <string name="map_action_bar">Carte</string>
    <string name="manual_barcode">Code bar manuel</string>
    <string name="create_ticket_description"><u>Ou vous pouvez créer un nouveau tickets pour</u></string>
    <string name="create_tickets_description1"><u>votre événement en cliquant sur ce texte</u></string>

</resources>
