...
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_weight="1">


                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="@dimen/username_width"
                    android:layout_height="@dimen/username_height"
                    android:layout_marginBottom="3dp"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/iceland_poppy"
...
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    >

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="@dimen/username_width"
                        android:layout_height="@dimen/username_height"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/iceland_poppy"
                        android:textColorHint="@color/colorPrimary"
...
